--- a/src/config/config.json
+++ b/src/config/config.json
@@ -6,8 +6,8 @@
     "SYMBOL": "pulse",
     "ID": 369
   },
-  "NFT_NAME": "Baby Ape Pulse Club",
-  "SYMBOL": "BAPC",
+  "NFT_NAME": "test",
+  "SYMBOL": "test",
   "MAX_SUPPLY": 5500,
   "WEI_COST": 0,
   "DISPLAY_COST": 0,
